--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -2,9 +2,6 @@
 title: "Statistical Learning, Homework-01"
 author: "Barba Paolo, Candi Matteo, Costantini Silvia, Vestini Maria Vittoria"
 date: '2023-05-10'
-
-
-
 output: 
   html_document:
     code_folding: hide
@@ -18,6 +15,9 @@ output:
       google: Prompt
       heading_font:
         google: Proza Libre
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 ```{r setup, include=FALSE}
@@ -43,49 +43,73 @@ invisible(lapply(pkt, require, character.only = TRUE))
 
 ## Purpose & Statistical tools used
 
-The homework's $1$ goal is to try to estimate an unknown  function $f(X_i)$, under the assumptions that $f$ lies in some fixed class of functions, in order to predict the response variable $Y$ from indipendent data $(X_1,Y_i) \dots ,(X_n,Y_n)$, assumining that the data satisfy the following:
+The homework's $1$ goal is to try to estimate an unknown function
+$f(X_i)$, under the assumptions that $f$ lies in some fixed class of
+functions, in order to predict the response variable $Y$ from
+independent data $(X_1,Y_i) \dots ,(X_n,Y_n)$, assuming that the data
+satisfy the following:
 
-$$Y_i | X_1 , \dots , X_n \sim p(y | f(X_i))$$
-For the Homework's $1$ sake we are going to use penalized linear regression model, obtaining the following:
-$$ Y_i = f(x_i) + \epsilon_i \ for \ i = 1\dots n $$
-where the $\epsilon_i$ are $i.i.d$ data from some normal distribution $N(0,\sigma^2)$.
+$$Y_i | X_1 , \dots , X_n \sim p(y | f(X_i))$$ For the Homework's $1$
+sake we are going to use a penalized linear regression model, obtaining
+the following: $$ Y_i = f(x_i) + \epsilon_i \ for \ i = 1\dots n $$
+where the $\epsilon_i$ are $i.i.d$ data from some normal distribution
+$N(0,\sigma^2)$.
 
-In order to get the optimal hyperparameter and MSE estimation  we will implement CV and nested CV tecnique.
-
+In order to get the optimal hyperparameter and MSE estimation we will
+implement CV and nested CV technique.
 
 ## Be linear in transformed feature space
 
-The basic idea of being linear in a transformed feature space is to map our parameters into a higher dimensional space with d-dimensions. The model will then be linear in that space.
+The basic idea of being linear in a transformed feature space is to map
+our parameters into a higher dimensional space with d-dimensions. The
+model will then be linear in that space.
 
-Let $\phi(x)$ be a feature mapping function that maps the input data $x$ into a transformed d-dimensional space. Let $w$ be a weight vector in the transformed space. Thus, the prediction function is given by $f(x) = w^T\phi(x)$. By mapping the parameters into higher dimensional space, we can capture more complex structures between the features and the target variable.
+Let $\phi(x)$ be a feature mapping function that maps the input data $x$
+into a transformed d-dimensional space. Let $w$ be a weight vector in
+the transformed space. Thus, the prediction function is given by
+$f(x) = w^T\phi(x)$. By mapping the parameters into higher dimensional
+space, we can capture more complex structures between the features and
+the target variable.
 
+The polynomial models in a d-dimensional feature space assume that there
+is a fixed functional form for the relationship between features and the
+response variable. And since this relationship is defined globally,
+these model may not capture the entire complexity of the data.
 
-The polynomial models in a d-dimensional feature space assume that there is a fixed functional form for the relationship between features and the response variable. And since this relationship is defined globally, these model may not capture the entire complexity of the data.
+Spline regression models, instead provide more flexible and adaptive
+modeling in order to catch up the local structures of the target
+function $Y$.
 
-Spline regression models, instead provide  more flexible and adaptive modeling in order to catch up the local structures of the target function $Y$.
+In order to implement splines, we use truncated power functions
+$\mathcal{G}_{d,q}$, defined as:
 
-In order to implement splines, we use truncated power functions $\mathcal{G}_{d,q}$, defined as:
+$$\mathcal{G}_{d,q} = {g_1(x) \dots g_{d+1}(x),g_{(d+1)+1}(x),\dots,g_{(d+1)+q}(x)}$$
+defined as:
 
- $$\mathcal{G}_{d,q} = {g_1(x) \dots g_{d+1}(x),g_{(d+1)+1}(x),\dots,g_{(d+1)+q}(x)}$$
- defined as:
+$\{g_1(x)=1,g_2(x)=x,...,g_{d+1}(x)=x^{d}\}$ and
+$\{g_{(d+1)+j}(x)= (x−\xi_{j})^d_+\}$ where $(x)_+ =max\{0,x\}$.
 
- $\{g_1(x)=1,g_2(x)=x,...,g_{d+1}(x)=x^{d}\}$ and $\{g_{(d+1)+j}(x)= (x−\xi_{j})^d_+\}$ where $(x)_+ =max\{0,x\}$.
+It can be easily shown that the spline function $f(x)$ can be
+represented by a linear combination of the power functions in
+$\mathcal{G}_{d,q}$:
 
+$$f(x)= \sum_{j= 1}^{d+q+1} β_j ·g_j(x)$$
 
-It can be easily shown that the spline function $f(x)$ can be represented by a linear combination of the power functions in $\mathcal{G}_{d,q}$: 
-
- $$f(x)= \sum_{j= 1}^{d+q+1} β_j ·g_j(x)$$
-
-
-where $\beta_j$ are the coefficients to be estimated, and $g_j(x)$ denotes the $j$-th power function in $\mathcal{G}_{d,q}$.
-
-
+where $\beta_j$ are the coefficients to be estimated, and $g_j(x)$
+denotes the $j$-th power function in $\mathcal{G}_{d,q}$.
 
 ## Implementation of the truncated power basis
 
-We have developed our own function of the truncated power basis $\mathcal{G}_{d,q}$. This function takes as input the degree $d$ of the truncated power functions, the number of knots $q$, and their positions, and returns a feature matrix $\mathbb{X}$. The feature matrix $\mathbb{X}$ will be used to obtain a prediction of the response variable $Y$.
+We have developed our own function of the truncated power basis
+$\mathcal{G}_{d,q}$. This function takes as input the degree $d$ of the
+truncated power functions, the number of knots $q$, and their positions,
+and returns a feature matrix $\mathbb{X}$. The feature matrix
+$\mathbb{X}$ will be used to obtain a prediction of the response
+variable $Y$.
 
-In order to illustrate our implementation, in the following plots, results are shown considering $d\ \in \{1 , 3\}$, and  $d\ \in \{3 , 10\}$.
+In order to illustrate our implementation, in the following plots,
+results are shown considering $d\ \in \{1 , 3\}$ and
+$d\ \in \{3 , 10\}$.
 
 ```{r power_function}
 
@@ -112,8 +136,6 @@ power_functions <- function(d, q, knots, x){
 }
 
 ```
-
-
 
 ```{r plot truncated power function, fig.showtext = TRUE, fig.height = 7, fig.width = 12, fig.align = "center", message=FALSE, warning=FALSE}
 
@@ -167,37 +189,48 @@ grid.arrange(p1, p2, p3, p4, ncol=2)
 
 ## Comments
 
-For $j \le d +1$, the truncated power function is defined as $g_j(x) = x^{j-1}$. For $j > d +1$, the truncated power function is defined as $g_j(x) = (x-\xi_j)^d_+$, where $(x)_+ = \max{0,x}$, and $\xi_j$ is the $j-d-1$-th knot.
+For $j \le d +1$, the truncated power function is defined as
+$g_j(x) = x^{j-1}$. For $j > d +1$, the truncated power function is
+defined as $g_j(x) = (x-\xi_j)^d_+$, where $(x)_+ = \max{0,x}$, and
+$\xi_j$ is the $j-d-1$-th knot.
 
-For $j > d +1$, the truncated power function is equal to zero for data points below the knot $\xi_j$, and $(x-\xi_j)^d$ for data points above the knot. 
+For $j > d +1$, the truncated power function is equal to zero for data
+points below the knot $\xi_j$, and $(x-\xi_j)^d$ for data points above
+the knot.
 
-The use of truncated power basis allows us to work with a higher dimensional feature space without using a high degree polynomial. The additional dimensions in the feature space come from the truncated power functions that capture the local structure of the target function around each knot. This can lead to more accurate modeling of complex relationships between the input features and the target variable.
+The use of truncated power basis allows us to work with a higher
+dimensional feature space without using a high degree polynomial. The
+additional dimensions in the feature space come from the truncated power
+functions that capture the local structure of the target function around
+each knot. This can lead to more accurate modeling of complex
+relationships between the input features and the target variable.
 
-An issue that can arise in spline regression is the presence of a non-singular matrix, which can lead to numerical instability in order to  obtain the parameter estimates.
+An issue that can arise in spline regression is the presence of a
+non-singular matrix, which can lead to numerical instability in order to
+obtain the parameter estimates.
 
-This problem typically arises when the knots are not well-spaced or when the degree of the spline is too high relative to the number of observations. In these cases, the matrix of the spline basis functions can become rank-deficient, which means that it has fewer linearly independent rows or columns than its dimensions.
-
-
+This problem typically arises when the knots are not well-spaced or when
+the degree of the spline is too high relative to the number of
+observations. In these cases, the matrix of the spline basis functions
+can become rank-deficient, which means that it has fewer linearly
+independent rows or columns than its dimensions.
 
 ## ChatGPT - Power function
 
+In this section we ask CHAT-GPT to implement its own version of
+truncated power basis. Below are reported the conversation we had with
+it.
 
-In this section we ask CHAT-GPT to implement his own version of truncated power basis.
- Below are reported the conversation we had with it.
+\*\*1° Request:\*\*
 
-** 1° Request:**
-
-"
-
-Can you implement a function in r to compute the truncated power basis, with parameters d, q, knots. Where $g_i=x^{i-1}$ if $i\le(d+1)$ else $g_{d+1+j} = \max((x-knots[j])^d, 0)$ for $j \in [1,q]$? 
-
-"
+" Can you implement a function in r to compute the truncated power
+basis, with parameters d, q, knots. Where $g_i=x^{i-1}$ if $i\le(d+1)$
+else $g_{d+1+j} = \max((x-knots[j])^d, 0)$ for $j \in [1,q]$? "
 
 **1 ° Response:**
 
-" 
-
-Certainly! Here's a function in R that computes the truncated power basis you described:
+" Certainly! Here's a function in R that computes the truncated power
+basis you described:
 
 ```{r GPT, class.source = "fold-show"}
 
@@ -219,12 +252,11 @@ truncated_power_basis <- function(x, d, q, knots) {
 }
 ```
 
+This function takes as input the vector x, the integer d, the integer q,
+and the vector knots. It returns a matrix with length(x) rows and d+1+q
+columns, where each column represents a basis function."
 
-This function takes as input the vector x, the integer d, the integer q, and the vector knots. It returns a matrix with length(x) rows and d+1+q columns, where each column represents a basis function.
-
-"
-
-Let's give a try to the chatbot implementation!
+Let's give a try to the ChatBot implementation!
 
 ```{r GPtest, error=TRUE, class.source = "fold-show"}
 
@@ -237,23 +269,24 @@ M <- truncated_power_basis(x, d, q, knots)
 
 ```
 
-Oopsie Doopsie! Looks like the ChatBot response doesn't work. So we will try and see how much we have tell it in order to obtain a working function, first thing to do is give it the error we got. 
+Oopsie Doopsie! Looks like the ChatBot response doesn't work. So we will
+try and see how much we have tell it in order to obtain a working
+function, the first thing we will do is tell it the error we got.
 
 *For this following part the code will not be directly shown.*
 
-**2° message request: **
+**2° message request:**
 
-"
-
-It seems like there is an error with your function, if i try to use it I get this error: "Error in `[<-`(`*tmp*`, , d + 1 + j, value = pmax((x - knots[j])^d, 0)): subscript out of bounds". Could you give me the correct implementation?ù
-
-"
+" It seems like there is an error with your function, if i try to use it
+I get this error: "Error in `[<-`(`*tmp*`, , d + 1 + j, value =
+pmax((x - knots[j])\^d, 0)): subscript out of bounds". Could you give me
+the correct implementation? "
 
 **2° response:**
 
-" 
-
-I apologize for the error in my previous implementation. Here's an updated version of the truncated_power_basis function that should work correctly:
+" I apologize for the error in my previous implementation. Here's an
+updated version of the truncated_power_basis function that should work
+correctly:
 
 ```{r GPtest2, error=TRUE}
 
@@ -277,25 +310,24 @@ truncated_power_basis <- function(x, d, q, knots) {
 
 ```
 
-...
+... "
 
-" 
-
-Again it doesn't work, so this time we give the ChatBot a hint, since we know that the problem is that there isn't enough allocated space for the matrix, this should have $q+d+1$ columns instead of $d+1$.
+Again it doesn't work, so this time we give the ChatBot a hint, since we
+realize that the problem is that there isn't enough allocated space for
+the matrix, in fact the matrix should have $q+d+1$ columns instead of
+$d+1$.
 
 **3° message:**
 
-"
-
-It doesn't solve it, I think the problem is in the dimension of the matrix.
-
-"
+" It doesn't solve it, I think the problem is in the dimension of the
+matrix. "
 
 **3° response:**
 
-"
+" I apologize for the continued issue. You are correct that there is an
+issue with the dimension of the matrix. Here is the corrected
+implementation of the truncated_power_basis function:
 
-I apologize for the continued issue. You are correct that there is an issue with the dimension of the matrix. Here is the corrected implementation of the truncated_power_basis function:
 ```{r GPtest3, error=TRUE}
 
 truncated_power_basis <- function(x, d, q, knots) {
@@ -317,20 +349,22 @@ truncated_power_basis <- function(x, d, q, knots) {
 }
 ```
 
-...
+... "
 
-"
-
-At the end since also this implementation doesn't work we decided to tell the ChatBot how to solve the issue
+At the end since also this implementation doesn't work we decided to
+tell the ChatBot how to solve the issue.
 
 **4° message:**
 
-"Still not good, shouldn't the matrix have $q+d+1$ columns since we are trying to evaluate $q+d+1$ functions?"😅
+" Still not good, shouldn't the matrix have $q+d+1$ columns since we are
+trying to evaluate $q+d+1$ functions? "😅
 
 **4° response:**
 
-"
-You are correct. I apologize for the error. The matrix should have $q + d + 1$ columns since we are computing a total of $q + d + 1$ basis functions. Here is the corrected implementation:
+" You are correct. I apologize for the error. The matrix should have
+$q + d + 1$ columns since we are computing a total of $q + d + 1$ basis
+functions. Here is the corrected implementation:
+
 ```{r GPtest4, error=TRUE}
 truncated_power_basis <- function(x, d, q, knots) {
   # Compute the first d+1 basis functions
@@ -352,18 +386,22 @@ truncated_power_basis <- function(x, d, q, knots) {
 
 ```
 
-..." 
+... "
 
-But again even if we straight up told the Bot what's the problem and how to solve it the function is not working! At the end the only thing left to do is just tell it the code it should use.
+But again even if we straight up told the Bot what's the problem and how
+to solve it the function is not working! At the end the only thing left
+to do is just tell it the code it should use.
 
-**5° (and final) message:** 
-"
-You are not allocating the memory for the matrix correctly, basis should be defined as "basis <- matrix(0, nrow = length(x), ncol = d+q+1)""
+**5° (and final) message:**
+
+" You are not allocating the memory for the matrix correctly, basis
+should be defined as "basis \<- matrix(0, nrow = length(x), ncol =
+d+q+1)". "
 
 **5° response:**
 
-"
-You are correct again. I apologize for the confusion. Here is the corrected implementation:
+" You are correct again. I apologize for the confusion. Here is the
+corrected implementation:
 
 ```{r GPtest5, error=TRUE, class.source = "fold-show"}
 truncated_power_basis <- function(x, d, q, knots) {
@@ -385,7 +423,7 @@ truncated_power_basis <- function(x, d, q, knots) {
 }
 ```
 
-To use this corrected function, simply call truncated_power_basis(x, d, q, knots) with your desired inputs. For example, to compute the truncated power basis with d=3, q=2, and knots=c(0.5, 1.5) for the vector x=c(0.2, 0.4, 0.6, 0.8, 1.0, 1.2, 1.4), you would call truncated_power_basis(x, 3, 2, c(0.5, 1.5)). This should return a matrix with 7 columns. "
+$\dots$ "
 
 Finally we obtain a function without errors!
 
@@ -393,22 +431,34 @@ Finally we obtain a function without errors!
 truncated_power_basis(seq(0,1,length.out=6), 3, 2, c(0.1, 0.5))
 ```
 
-Sadly though we realize that from the third response on the ChatBot changed a line of code from $basis[,d+j+1] <- pmax((x - knots[j])^d, 0)$ to $basis[,d+j+1] <- pmax((x - knots[j])^{d*(x >= knots[j])}, 0)$ and now the function indeed does gives an output, but it's not the right one.
+Sadly though we realize that, from the third response on, the ChatBot
+changed a line of code from $basis[,d+j+1] <- pmax((x - knots[j])^d, 0)$
+to $basis[,d+j+1] <- pmax((x - knots[j])^{d*(x >= knots[j])}, 0)$ and
+now the function indeed does gives an output, but it's not the right
+one.
 
 ## Comments:
 
-After the chat we had wit ChatGPT, our thoughts are that the chatbot can be very useful for providing a starting point which to start. We think it can be risky
-for non-experts in the field since the may not be able to identify errors or misunderstandings in the information that the chat provides, it can lead to errors in the fianl results.
+After the chat we had with ChatGPT, our thoughts are that the chatbot
+can be very useful for providing a starting point. We believe, however,
+that can be risky for non-experts in the field to use the chatbot, since
+they may not be able to identify errors or misunderstandings in the
+information that the chat provides, it can lead to errors in the final
+results.
 
-We have to remark that that chatbots have limitations in fields that require specialized knowledge or experience, such as statistics or data analysis.
+We have to remark that chatbots have limitations in fields that require
+specialized knowledge or experience, such as statistics or data
+analysis.
 
 ## Dataset
 
+The Dataset we are going to use to implement the model is about
+**Wilkinson Microwave Anisotropy Probe**, also known as **WMAP**. An
+explorer mission that measured the difference of temperature across the
+space.
 
-The Dataset we are going to use to implement the model is about  **Wilkinson Microwave Anisotropy Probe**, also known as **WMAP**. An explorer mission that measured the difference of temperature accros the space.
-
-The Dataset is composed by $675$ observations of $2$ variable of interest.
-
+The Dataset is composed by $675$ observations of $2$ variable of
+interest.
 
 ```{r dataset}
 
@@ -416,7 +466,6 @@ test_set_vero <- read.csv("test.csv")
 train_set <- read.csv("train.csv")
 
 ```
-
 
 ```{r plot dataset , warning=FALSE}
 # Plot --------------------------------------------------------------------
@@ -428,39 +477,46 @@ grid()
 
 ```
 
-
-
 ## Vanilla Cross Validation
 
-In order to estimate the coefficients $\beta_j$ in our penalized linear model, we are going to perform a $k-fold$ cross validation.
+In order to estimate the coefficients $\beta_j$ in our penalized linear
+model, we are going to perform a $k-fold$ cross validation.
 
-Since the variance of the response variable is not constant across the range of predictor variables
-it can be possible that , picking knots where the functions is very variable, may influence the good predictive performance of our model.
-In order to try to resolve this problem, we fix the lower bound of the position of the knots at $0$ and we add the hyperparameter $p$ that is reppresenting the upper bound. The knots will be equispaced in interval $(0,p]$.
+Since the variance of the response variable is not constant across the
+range of predictor variables it can be possible that , picking knots
+where the functions is very variable, may influence the good predictive
+performance of our model. In order to try to resolve this problem, we
+fix the lower bound of the position of the knots at $0$ and we add the
+hyperparameter $p$ that is representing the upper bound. The knots will
+be equispaced in interval $(0,p]$.
 
-Once we have performed the power functions, we train a penalized linear model, where we tune the type of regularization from Ridge to Lasso throughout some elestic net.
+Once we have performed the power functions, we train a penalized linear
+model, where we tune the type of regularization from Ridge to Lasso
+throughout some elastic net.
 
 At the end of the day, we end up with $5$ hyperparameter to tune:
 
-- $\alpha$ for Ridge, Lasso and elastic net
-- $\lambda$ Reguarization parameter
-- $d$ degree of the power functions
-- $q$ the number of knots
-- $p$ positions of the upper bound
+-   $\alpha$ for Ridge, Lasso and elastic net
+-   $\lambda$ Regularization parameter
+-   $d$ degree of the power functions
+-   $q$ the number of knots
+-   $p$ positions of the upper bound
 
+Since the data shown that for a higher $x$, the y are way more variable,
+in the train of our model, we will use into the model weights
+proportional to the variance given $x$.
 
+We will down-weight observations with high variance and up-weight
+observations with low variance, which can decrease the error of our
+predictions.
 
+Given the knots we estimated the conditional variance by computing the
+empirical variance of $y$ in the intervals defined by the knots.
 
-
-Since the data shown  that for a higher $x$, the y are way more variable, in the train of our model, we will use into the model weights proportional to the variance given $x$.
-
-We will down-weight observations with high variance and up-weight observations with low variance, which can decrease the error of our predictions. 
-
-Given the knots we estimated the conditional variance by computing the empirical variance of $y$ in the intervals defined by the knots.
-
-
-The idea is that after cross validation we shrink the space of our parameters that we consider sub-optimal. Then we will perform the nested cross validation in order to select in a more accurate way the hyperparameters.
-
+The idea is that after cross validation we shrink the space of our
+parameters that we consider sub-optimal. Then we will perform the nested
+cross validation in order to select in a more accurate way the
+hyperparameters.
 
 ```{r functions VCV}
 
@@ -575,10 +631,6 @@ best_params <- res$minlevels
 names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda', 'position')
 ```
 
-
-
-
-
 ```{r training with vanilla parameters, warning = FALSE}
 load("RData/best_params_vanilla.RData")
 # Prediction --------------------------------------------------------------
@@ -602,7 +654,6 @@ final_model <- glmnet(M_train, train_set$y, family ="gaussian",
 predictions <- predict(final_model,M_test)
 best_params
 ```
-
 
 ```{r plot after vanilla, fig.showtext = TRUE, fig.height = 5, fig.width = 10, fig.align = "center", message=FALSE, warning=FALSE}
 
@@ -636,10 +687,9 @@ ggplot() +
 
 ```
 
+### Kaggle-LeaderBoard-Result:
 
-### Kaggle-LeaderBoard-Result:  
 ## Update the parameter
-
 
 ```{r update parameter , warning=FALSE}
 # Update Parameters -------------------------------------------------------------
@@ -663,7 +713,6 @@ p <- p_best + seq(-0.05, 0.05, 0.025)
 parameters <- list(d, q, k, a, l, p)
 
 ```
-
 
 ## Nested Cross Validation
 
@@ -782,7 +831,6 @@ nested_crossval <- function(x){
 
 ```
 
-
 ```{r run nested cv , eval = FALSE}
 # CV nested --------------------------------------------------------------
 cl = makeCluster(detectCores())
@@ -792,7 +840,6 @@ stopCluster(cl)
 best_params <- res$minlevels
 names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda','position')
 ```
-
 
 ```{r training with nested parameters, warning = FALSE}
 
@@ -817,8 +864,6 @@ final_model <- glmnet(M_train, train_set$y, family ="gaussian",
 predictions <- predict(final_model, M_test)
 best_params
 ```
-
-
 
 ```{r plot after nested, fig.showtext = TRUE, fig.height = 5, fig.width = 10, fig.align = "center", message=FALSE, warning=FALSE}
 
@@ -851,7 +896,5 @@ ggplot() +
         axis.text = element_text(color = "white", size = 10),
         axis.title.y = element_text(angle = 0, vjust = 0.5))
 ```
-
-
 
 # Conclusion & Final Remark
