--- a/hw1_markdown.Rmd
+++ b/hw1_markdown.Rmd
@@ -25,7 +25,7 @@ if (requireNamespace("thematic"))
   thematic::thematic_rmd(font = "auto")
 ```
 
-```{r package, message=FALSE}
+```{r package, message=FALSE, warning=FALSE}
 
 rm(list = ls())
 
@@ -35,7 +35,7 @@ set.seed(seed)
 
 # Libraries and Data ---------------------------------------------------------------
 
-pkt <- c('glmnet', 'NMOF', 'parallel', 'snow', 'ggplot2', 'reshape2', 'gridExtra','tidyverse','manipulate')
+pkt <- c('glmnet', 'NMOF', 'parallel', 'snow', 'ggplot2', 'reshape2', 'gridExtra','tidyverse')
 
 invisible(lapply(pkt, require, character.only = TRUE))
 
@@ -221,7 +221,7 @@ In this section we ask CHAT-GPT to implement its own version of
 truncated power basis. Below are reported the conversation we had with
 it.
 
-\*\*1° Request:\*\*
+**1° Request:**
 
 " Can you implement a function in r to compute the truncated power
 basis, with parameters d, q, knots. Where $g_i=x^{i-1}$ if $i\le(d+1)$
@@ -607,20 +607,17 @@ cross_val_func <- function(x){
 }
 ```
 
-```{r parametes}
-k <- c(4)
+```{r cv vanilla, eval = FALSE}
+# parameters
+k <- c(5)
 d_grid <- c(1, 3) 
-q_grid <- seq(3, 30, 1)
-positions <- c(0.5, 0.6, 0.7, 0.8)
-lambdas <- 10^seq(-2.5, -1, .25)
+q_grid <- seq(3, 50, 2)
+positions <- seq(0.2, 0.8, 0.1)
+lambdas <- 10^seq(-0.5, 0, .05)
 alphas <- seq(0, 1, 0.1)
 # Set the parameter for the CV
 parameters <- list(d_grid, q_grid, k, alphas, lambdas, positions)
 
-
-```
-
-```{r cv vanilla, eval = FALSE}
 # CV vanilla --------------------------------------------------------------
 # Select the best combination of parameters
 cl = makeCluster(detectCores())
@@ -631,8 +628,10 @@ best_params <- res$minlevels
 names(best_params) <- c('d', 'q', 'k', 'alpha', 'lambda', 'position')
 ```
 
+After the vanilla cross validation this are the hyperparameters we obtained:
+
 ```{r training with vanilla parameters, warning = FALSE}
-load("RData/best_params_vanilla.RData")
+load("RData//best_params_vanilla_NODC.RData")
 # Prediction --------------------------------------------------------------
 
 # Using the best parameters
@@ -654,6 +653,8 @@ final_model <- glmnet(M_train, train_set$y, family ="gaussian",
 predictions <- predict(final_model,M_test)
 best_params
 ```
+
+After training the model with those hyperparameters and predicting the $Y$ in the test set, we can plot our results.
 
 ```{r plot after vanilla, fig.showtext = TRUE, fig.height = 5, fig.width = 10, fig.align = "center", message=FALSE, warning=FALSE}
 
@@ -687,11 +688,15 @@ ggplot() +
 
 ```
 
-### Kaggle-LeaderBoard-Result:
+### Kaggle-LeaderBoard-Result: 3329.84561 in RMSE
 
 ## Update the parameter
 
-```{r update parameter , warning=FALSE}
+As anticipated before, after computing the k-fold cross validation, we are going 
+to select some new parameter, similar to the ones obtained from the validation, 
+to test via Nested Cross Validation.
+
+```{r update parameter, warning=FALSE}
 # Update Parameters -------------------------------------------------------------
 
 # Using the best parameters
@@ -705,9 +710,9 @@ p_best <- best_params[6]
 d <- d_best
 q <- q_best+seq(-2,2,1)
 k <- k_best
-a <- a_best
-l <- l_best + seq(-0.005,0.005,0.001)
-p <- p_best + seq(-0.05, 0.05, 0.025)
+a <- a_best + seq(-0.03, 0, 0.01)
+l <- l_best + seq(-0.05, 0.05, 0.025)
+p <- p_best
 
 # Set the parameter for the CV
 parameters <- list(d, q, k, a, l, p)
@@ -716,7 +721,15 @@ parameters <- list(d, q, k, a, l, p)
 
 ## Nested Cross Validation
 
-```{r nested cross validation}
+To apply the Nested Cross Validation the first thing we have to do is implement
+its main functions:
+
+- **nested_crossval**, that takes as input the hyperparameters and the data, inside this function we will iteratively select the k-folds randomly, then for each of the folds we call the *inner_crossval* function (to obtain the vector $e^{(in)}$), train and test the model (to compute the vector $e^{(out)}$). After each iteration the function will store $e^{(in)}$ in the vector $es$ and compute the wanted quantities $(mean(e^{(in)})-mean(e^{(out)}))^2$ and $\frac{var(e^{(out)})}{len(fold)}$, to be stored in *a_list* and *b_list* respectly. At the end the function will return an estimator of the RMSE and one for the MSE of the cross-validation MSE.
+
+- **inner_crossval**, takes as input $k-1$ out of the $k$ folds created in the previous function and 
+
+
+```{r nested cross validation, eval=FALSE}
 
 # Secondary function for nested CV
 inner_crossval <- function(x, train_set){
@@ -820,12 +833,10 @@ nested_crossval <- function(x){
       
       a_list[(r-1)*K+k] <- (mean(e_in)-mean(e_out))^2 
       b_list[(r-1)*K+k] <- (sd(e_out)^2)/l_folds
-      #es <- c(es, e_in)   
     }
   }
   
   mse <- mean(a_list)-mean(b_list)
-  #err <- mean(es)
   return(mse)
 }
 
